--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ margin-top: 0;
     border:4px solid red;
     width:47%;
 }
-.header
+.header{
     border:4px solid blue;
     margin:2px;
     width:40%;
