--- a/style.css
+++ b/style.css
@@ -1,35 +1,35 @@
 body{margin:0;padding:0;}
 h1{
-background-color: red;
+
 text-align: center;
 width:100%;
-margin-top: 0;
+margin-top: 20px;
 
 }
+h6{
+    text-align: center;
+}
+h1:hover{
+    transition:ease-in;
+}
+
 .container{
-    margin:auto;
-    border:4px solid red;
-    width:47%;
-}
-.header{
-    border:4px solid blue;
-    margin:2px;
+    margin:auto;max-width: 400px;
+    border:4px solid black;
     width:40%;
-    margin-left: 30%;
-}
-.blocks{
-display:flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-flex-wrap:wrap;border:2px solid red;margin:4px;
+    box-shadow:rgb(90, 89, 89);
 
 }
-.block{
-   text-align: center;
-   border:2px solid red;margin:4px;
-    height: 20%;padding-top:15%;
-    }
+#display{
+    text-align: right;
+    height:40px;
+    line-height: 60px;
+    font-size: 24px;
+    padding: 16px 8px;
+    border-bottom: black;
+}
+
+
 
 .buttons{
     display: grid;
@@ -59,4 +59,7 @@ border-right:1px solid #999;
     background-color: #323232;
     color:white;
     transition: 0.5s ease-in-out;
+}
+#eq{
+    background-color: rgb(160, 12, 173);
 }
